<resources>
    <string name="cast_app_id">73164B24</string>
    <string name="default_notification_channel_id">PlayBeatPushNotification</string>
    <string name="about_album_label">About %s</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to sea pink</string>
    <string name="action_about">About</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_cast">Cast</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_edit">Edit</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_lyrics">Go to Lyrics</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="add_time_framed_lryics">Add Time Framed Lyrics</string>
    <string name="added_song_count_to_playlist">Added %d song(s) to %s</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album Artist</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Full Image</string>
    <string name="app_widget_card_name">Card</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="app_widget_md3_name">MD3</string>
    <string name="app_widget_small_name">Small</string>
    <string name="app_widget_text_name">Minimal Text</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_fade_duration">Audio fade duration</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="backup_restore_settings_summary">Backup and restore your settings, playlists</string>
    <string name="backup_restore_title"><![CDATA[Backup & Restore]]></string>
    <string name="backup_title">Backups</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Enhanced Dark</string>
    <string name="blacklist">Blacklist</string>
    <string name="blur">Blur Background</string>
    <string name="blur_card">Blur Fit Card</string>
    <string name="bug_report_failed">Unable to send report</string>
    <string name="bug_report_failed_invalid_token">Invalid access token. Please contact the app developer.</string>
    <string name="bug_report_failed_issues_not_available">Issues are not enabled for the selected repository. Please contact the app developer.</string>
    <string name="bug_report_failed_unknown">An unexpected error occurred. Please contact the app developer.</string>
    <string name="bug_report_failed_wrong_credentials">Wrong username or password</string>
    <string name="bug_report_issue">Issue</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_no_description">Please enter an issue description</string>
    <string name="bug_report_no_password">Please enter your valid GitHub password</string>
    <string name="bug_report_no_title">Please enter an issue title</string>
    <string name="bug_report_no_username">Please enter your valid GitHub username</string>
    <string name="bug_report_summary">An unexpected error occurred. Sorry you found this bug, if it keeps crashing \"Clear app data\" or send an Email </string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="buy_now">Buy now</string>
    <string name="cancel_current_timer">Cancel</string>
    <string name="card">Card</string>
    <string name="card_color_style">Colored Card</string>
    <string name="colors">Colors</string>
    <string name="equalizer">Equalizer</string>
    <string name="home">Home</string>
    <string name="library_categories">Library categories</string>
    <string name="playlists">Playlists</string>
    <string name="pref_filter_song_summary">Filter songs by length</string>
    <string name="pref_filter_song_title">Filter song duration</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_album">Album style</string>
    <string name="pref_header_blacklist">Blacklist</string>
    <string name="pref_header_controls">Controls</string>
    <string name="pref_header_general">Theme</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_header_playlists">Playlists</string>
    <string name="pref_keep_pause_on_zero_volume_summary">Pauses the song when the volume decreases to zero and starts playing back when the volume level rises. Also works outside the app</string>
    <string name="pref_keep_pause_on_zero_volume_title">Pause on zero</string>
    <string name="pref_summary_audio_ducking">Lower the volume when a system sound is played or a notification is received</string>
    <string name="pref_summary_audio_fade">Fade audio when song is paused or played</string>
    <string name="pref_summary_blacklist">The content of blacklisted folders is hidden from your library.</string>
    <string name="pref_summary_carousel_effect">Carousel effect for the album art in the now playing screen. Note that Card and Blur Card themes won\'t work</string>
    <string name="pref_summary_colored_app">The background and control button colors change according to the album art from the now playing screen</string>
    <string name="pref_summary_colored_app_shortcuts">Colors the app shortcuts in the accent color. Every time you change the color please toggle this to take effect</string>
    <string name="pref_summary_cross_fade">Duration to crossfade between songs</string>
    <string name="pref_summary_desaturated_color">As per Material Design guide lines in dark mode colors should be desaturated</string>
    <string name="pref_summary_expand_now_playing_panel">Clicking on the notification will show now playing screen instead of the home screen</string>
    <string name="pref_summary_gapless_playback">"Can cause playback issues on some devices."</string>
    <string name="pref_summary_ignore_media_store_artwork">Can increase the album cover quality, but causes slower image loading times. Only enable this if you have problems with low resolution artworks</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories.</string>
    <string name="pref_summary_pause_history">When enabled, newly played songs won\'t show in history</string>
    <string name="pref_summary_remember_tab">Navigate to the last used tab on start</string>
    <string name="pref_summary_swipe_anywhere_now_playing">Enables changing song by swiping anywhere on the now playing screen</string>
    <string name="pref_summary_toggle_shuffle">Shuffle mode will turn off when playing a new list of songs</string>
    <string name="pref_summary_wallpaper_accent">Extract accent color from wallpaper</string>
    <string name="pref_title_album_cover_transform">Album cover skip</string>
    <string name="pref_title_app_shortcuts">Colored app shortcuts</string>
    <string name="pref_title_audio_ducking">Reduce volume on focus loss</string>
    <string name="pref_title_audio_fade">Fade audio</string>
    <string name="pref_title_auto_download_artist_images">Auto-download artist images</string>
    <string name="pref_title_colored_app">Adaptive color</string>
    <string name="pref_title_cross_fade">Crossfade (Beta)</string>
    <string name="pref_title_desaturated_color">Desaturated color</string>
    <string name="pref_title_expand_now_playing_panel">Show now playing screen</string>
    <string name="pref_title_gapless_playback">Gapless playback</string>
    <string name="pref_title_general_theme">App theme</string>
    <string name="pref_title_ignore_media_store_artwork">Ignore Media Store covers</string>
    <string name="pref_title_last_added_interval">Last added playlist interval</string>
    <string name="pref_title_lyrics_type">Lyrics type</string>
    <string name="pref_title_now_playing_screen_appearance">Choose player theme</string>
    <string name="pref_title_pause_history">Pause history</string>
    <string name="pref_title_remember_tab">Remember last tab</string>
    <string name="pref_title_swipe_anywhere_now_playing">Swipe anywhere to change song</string>
    <string name="pref_title_tab_text_mode">Tab titles mode</string>
    <string name="pref_title_toggle_carousel_effect">Carousel effect</string>
    <string name="pref_title_toggle_toggle_shuffle">Shuffle mode</string>
    <string name="pref_title_wallpaper_accent">Wallpaper accent color</string>
    <string name="songs">Songs</string>
</resources>