<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/for_you" />-->

    <item
        android:id="@+id/action_song"
        android:enabled="true"
        android:icon="@drawable/ic_audiotrack"
        android:title="@string/songs" />
    <item
        android:id="@+id/action_album"
        android:enabled="true"
        android:icon="@drawable/ic_album"
        android:title="@string/albums" />
    <item
        android:id="@+id/action_artist"
        android:enabled="true"
        android:icon="@drawable/ic_artist"
        android:title="@string/artists" />
    <item
        android:id="@+id/action_playlist"
        android:enabled="true"
        android:icon="@drawable/ic_queue_music"
        android:title="@string/playlists" />
    <item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/action_about" />
    <!--<item
        android:id="@+id/settingsActivity"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />-->

</menu>